2003-09-17  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3mhack.el (w3mhack-nonunix-install): Use icons30 for XEmacs.
	(w3mhack-make-package): Use icons30.

	* Makefile.in (SUBDIRS): Add icons30.
	(install-icons30): New rule.
	(install-package, install-package-ja): Use it.

	* icons/*.xpm: Shrink the size of all icons.
	* icons30/: Old icons are here.

2003-09-16  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-util.el (w3m-activate-zmacs-regions): New macro.
	* w3m.el (w3m-next-anchor, w3m-previous-anchor, w3m-next-form,
	w3m-previous-form, w3m-next-image, w3m-previous-image,
	w3m-scroll-up-or-next-url, w3m-scroll-down-or-previous-url,
	w3m-beginning-of-line, w3m-end-of-line): Use it.

2003-09-16  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-hist.el (w3m-history-backward): Return nil if there is no
	previous element.

	* w3m.el (w3m-view-previous-page): Skip the current page if it
	seems broken; warn if there's no more history.
	(w3m-copy-buffer): Use the current history for the url string if
	the current page seems broken.
	(w3m-goto-url): Use `lexical-let' to pass the history position
	data to the asynchronous w3m process.

2003-09-12  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-e21.el: Move the favicon stuff to w3m-favicon.el.

	* w3m-favicon.el: New file detached from w3m-e21.el.
	(w3m-favicon-type): Adapt it to XEmacs as well.
	(w3m-setup-favicon): Ditto.
	(w3m-buffer-favicon): Ditto.
	(w3m-retrieve-favicon): Replace `float-time' with `w3m-float-time'.
	(w3m-arrived-setup-functions): Don't add-hook it here.
	(w3m-arrived-shutdown-functions): Ditto.

	* w3m-xmas.el: Require `w3m-favicon'.

	* w3m.el (w3m-arrived-setup-functions): Add
	`w3m-favicon-load-cache-file' if w3m-favicon is loaded.
	(w3m-arrived-shutdown-functions): Add `w3m-favicon-save-cache-file'
	if w3m-favicon is loaded.

	* w3m-util.el (w3m-float-time): New function.

	* w3mhack.el (w3mhack-examine-modules): Exclude w3m-favicon.el
	from the files to be byte-compiled.
